# glsl-optimizer

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/glsl/: builtin_functions.cpp  glsl_optimizer.cpp  glsl_parser_extras.cpp  glsl_parser_extras.h  ir_print_glsl_visitor.cpp  ir_print_metal_visitor.cpp
tests/: glsl_optimizer_tests.cpp
tests/fragment/: basic-out.txt  bug-inline-names-out.txt  bug-vectorize-tex-out.txt  derivatives-out.txt  estest1-out.txt  float-literals-out.txt  global-struct-constant-init-metal-outES3Metal.txt  intrinsics-out.txt  loop-forvariants-out.txt  opt-copyprop-struct-out.txt  opt-copypropelems-swizzle-out.txt  opt-vectorize-ifs-out.txt  opt-vectorize-retval-out.txt  opt-vectorize-types-out.txt  small-float-out.txt  struct-initializer-out.txt  ternary-out.txt  ternary-vec4-out.txt  tex2DArray-out.txt  tex2dgrad-out.txt  tex2dlod-out.txt  tex2dshadow-out.txt  tex3D-out.txt  vface-out.txt  vpos-out.txt  z-alphabumpspec-out.txt  z-collectshadows-out.txt  z-flare-out.txt  z-fxaa-preset1-out.txt  z-fxaa-preset3-out.txt  z-fxaa3-11-consolepc-out.txt  z-fxaa3-11-pc39-out.txt  z-particle-out.txt  z-prepasslight-out.txt  z-prepasslight-outES.txt  z-prepasslight-outES3.txt  z-prepasslight-outES3Metal.txt  z-treeleaf-out.txt  z-unishader-dirlm-out.txt  z-unishader-dirlm-outES3.txt  (+155 more)
tests/vertex/: bug-chained-assign-out.txt  bug-loops-for-while-out.txt  bug-struct-uniform-out.txt  bug-varying-const-out.txt  bug-vector-compare-inES3.txt  bug-vector-compare-outES3.txt  bug-vector-compare-outES3Metal.txt  builtin-vars-out.txt  estest1-out.txt  loops-for-out.txt  loops-forsimple-out.txt  loops-forwithcalls-out.txt  opt-normalize-out.txt  opt-unusedvars-out.txt  swizzlemask-out.txt  types-out.txt  z-NichsHybridLight-out.txt  z-NichsHybridLightVectorInsertBug-out.txt  z-alphabumpspec-out.txt  z-particle-out.txt  z-prepasslight-out.txt  z-treeleaf-out.txt  z-unishader-dirlm-out.txt  zun-Bumped_Specular-out.txt  zun-Decal-out.txt  zun-Diffuse-out.txt  zun-Diffuse_Alpha_Shadowed_ZWrite-out.txt  zun-FX_Water_(simple)-out.txt  zun-Hidden_Camera-DepthNormalTexture-out.txt  zun-Hidden_TerrainEngine_BillboardTree-out.txt  zun-Hidden_TerrainEngine_Details_BillboardWavingDoublePass-out.txt  zun-Hidden_TerrainEngine_Details_BillboardWavingDoublePass1-out.txt  zun-Hidden_TerrainEngine_Details_BillboardWavingDoublePass2-out.txt  zun-Hidden_TerrainEngine_Details_WavingDoublePass1-out.txt  zun-Hidden_TerrainEngine_Soft_Occlusion_Bark_rendertex-out.txt  zun-Hidden_TerrainEngine_Splatmap_Lightmap-AddPass-out.txt  zun-Hidden_TerrainEngine_Splatmap_Lightmap-FirstPass1-out.txt  zun-Hidden_Tree_Leaf_Shader_Rendertex-out.txt  (+58 more)
